atualização do cap 6

--- a/index.html
+++ b/index.html
@@ -364,12 +364,23 @@
           </div>
 
           <!-- Capítulos 6-15 (Estrutura preparada) -->
-          <div class="novel-book-card coming-soon">
+          <div class="novel-book-card">
             <div class="book-cover">
-              <div class="coming-soon-book">
-                <i class="fas fa-plus"></i>
-                <h3>Capítulo 6</h3>
-                <p>Em Breve</p>
+              <img
+                src="public/images/Capitulo 6/CAPA6.png"
+                alt="Capítulo 6 - A Missão de Hiroshi"
+                class="cover-image"
+              />
+              <div class="book-overlay">
+                <div class="book-info">
+                  <h3>Capítulo 6</h3>
+                  <p>A Missão de Hiroshi</p>
+                  <span class="chapter-status available">Disponível</span>
+                </div>
+                <button class="download-book-btn" onclick="downloadPDF(6)">
+                  <i class="fas fa-download"></i>
+                  Baixar PDF
+                </button>
               </div>
             </div>
           </div>
