--- a/index.html
+++ b/index.html
@@ -385,12 +385,23 @@
             </div>
           </div>
 
-          <div class="novel-book-card coming-soon">
+          <div class="novel-book-card">
             <div class="book-cover">
-              <div class="coming-soon-book">
-                <i class="fas fa-plus"></i>
-                <h3>Capítulo 7</h3>
-                <p>Em Breve</p>
+              <img
+                src="public/images/Capitulo 7/capa 7.jpg"
+                alt="Capítulo 7 – Invasão na Sociedade dos Dragões"
+                class="cover-image"
+              />
+              <div class="book-overlay">
+                <div class="book-info">
+                  <h3>Capítulo 7</h3>
+                  <p>Invasão na Sociedade dos Dragões</p>
+                  <span class="chapter-status available">Disponível</span>
+                </div>
+                <button class="download-book-btn" onclick="downloadPDF(7)">
+                  <i class="fas fa-download"></i>
+                  Baixar PDF
+                </button>
               </div>
             </div>
           </div>
